Add author and license comments, update HTML title, and enhance practice editor functionality

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>IT Skill – Courses</title>
+  <title>IT Courses Platform</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./ui/css/base.css" />
   <link rel="stylesheet" href="./ui/css/layout.css" />
